MDEV-15412 For any non-existing transaction ID, AS OF provides the current table contents without a warning

Fail with error on non-existing TRX_ID.

Closes #832